src/scss/components/_product-hero.scss
.k-producthero {
  .k-inner--xl {
    background: $bg-gray;
    border-radius: 0.5em;
  }

  &--bundle {
    .k-productform--price {
      text-align: left;
      padding-left: 2em;
    }
  }

  &--gallery {
    padding-top: 2em;
  }

  &--slide {
    width: 100%;

    .k-figure {
      width: 80%;
      margin: auto;

      &--liner {
        padding-bottom: 100%;
      }
    }
  }

  &--reviews {
    p,
    div {
      display: inline-block;
    }

    a {
      color: $primary;

      &:hover {
        color: $primary-dark !important;
      }
    }
  }

  &--details {
    &__content {
      padding: 2em 1em;
    }
  }

  &__controls {
    position: absolute;
    pointer-events: none;
    width: 95%;
    top: 50%;
    left: 2.5%;
    transform: translateY(-50%);
    z-index: 9;

    svg {
      pointer-events: all;
      stroke: $accent-text;
      fill: transparent;

      &:nth-child(2) {
        float: right;
      }

      &:hover {
        stroke: $primary;
        cursor: pointer;
      }
    }
  }
}

.k-productform {
  button[disabled] {
    background: transparent;
    color: $black;

    &:hover {
      cursor: default;
    }
  }

  &--liner {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    align-items: center;
  }

  &--bundle {
    .k-productform {
      &--bundleselect {
        flex-basis: 100%;
      }

      &--submit,
      &--price {
        flex-basis: 50%;
      }

      &--price {
        order: 2;
      }
    }
  }

  &--heading {
    margin-bottom: 0.5em;
  }

  &--variants {
    flex-basis: 100%;

    input[type='radio'] {
      position: absolute;
      visibility: hidden;

      & + label {
        position: relative;
        display: block;
        border: 1px solid #ccc;
        border-radius: 0.25em;
        color: #ccc;
        text-align: center;
        padding: 0.667em 1.15em;
        transition: color 0.4s $ease-out-circ;
        overflow: hidden;

        &:hover {
          cursor: pointer;
        }

        span {
          position: relative;
          z-index: 2;
          pointer-events: none;
        }

        &:after {
          display: block;
          content: '';
          position: absolute;
          top: 0;
          left: 0;
          width: 100%;
          height: 100%;
          background: $bg-dark;
          transition: transform 0.4s $ease-out-circ;
          transform: scale(1, 0);
          transform-origin: bottom center;
          pointer-events: none;
          user-select: none;
        }
      }

      &.selected,
      &:checked {
        & + label {
          color: $true-white;

          &:after {
            transition: transform 0.2s $ease-out-circ;
            transform: scale(1, 1);
            transform-origin: top center;
          }
        }
      }
    }
  }

  &__desc {
    flex-basis: 100%;
    display: flex;
    justify-content: space-between;
    margin-bottom: 0.25em;
  }

  &--variantselect {
    position: relative;
    display: block;
    margin-bottom: 0.5em;

    label {
      margin-left: 0 !important;
    }

    &.k-out-of-stock,
    &.has-quantity {
      margin-top: 1.5em;

      .k-productform--varianttoggle {
        padding-top: 1em;
      }
    }

    &.k-out-of-stock {
      pointer-events: none;
    }

    &:hover {
      cursor: pointer;
    }

    .k-badge {
      position: absolute;
      z-index: 2;
      color: $true-white;

      &--liner {
        position: relative;
        padding: 0.25em 1em;
      }

      &--quantity {
        top: -1em;
        right: -0.5em;

        .k-badge--liner {
          width: 2em;
          height: 2em;
          background: $primary;
          border-radius: 50%;
        }

        span {
          position: absolute;
          top: 50%;
          left: 50%;
          transform: translate(-50%, -50%);
        }
      }

      &--outofstock {
        top: -0.85em;
        z-index: 1;
        left: 50%;
        width: 100%;
        transform: translateX(-50%);

        .k-badge--liner {
          background: $highlight;
          font-size: 75%;
          border-radius: 0.25em;
        }
      }
    }
  }

  &__flavorselect {
    flex-basis: 100%;
    margin-top: 0.5em;
    margin-bottom: 1em;

    p {
      margin-top: 0;
      margin-bottom: 0.5em;
    }

    &__main {
      position: relative;
    }

    select {
      padding: 1.0125em 1.15em;
      border: 1px solid #dedede;
      border-radius: 0.25em !important;
      margin-top: 0;

      &:hover {
        cursor: pointer;
      }
    }

    span {
      position: absolute;
      top: 50%;
      right: 1.0125em;
      transform: translateY(-50%);
      color: #ccc;
    }
  }

  &--quantity,
  &--price {
    display: inline-block;
    width: 48.5%;
  }

  &--quantity {
    position: relative;
    margin-top: 0.5em;

    input[type='number'] {
      appearance: none;
      width: 100%;
      text-align: center;
      font-weight: 500;
      // padding: 1.25em 3em;
      border: 1px solid $bg-dark;
      border-radius: 0.25em;
      box-shadow: none;
      background: $true-white;
      outline: none;
    }

    #k-reduce,
    #k-increase {
      position: absolute;
      top: 50%;
      left: 0.5em;
      transform: translateY(-50%);
      appearance: none;
      background: none;
      border: none;
      font-weight: 500;

      &:hover {
        cursor: pointer;
      }
    }

    #k-increase {
      right: 0.5em;
      left: auto;
    }
  }

  &--price {
    text-align: right;
    position: relative;

    p {
      margin: 0;
      font-size: 2em;
    }

    #k-bundle-price-prefix,
    sup {
      font-size: 50%;
      color: $primary;
    }

    #k-bundle-price-prefix {
      margin-bottom: -1em;
      display: block;
    }

    sup {
      padding-left: 1em;
      vertical-align: text-top;
      margin-top: 1.33em;
      display: inline-block;
    }
  }

  &--submit {
    order: 2;
    flex-basis: 100%;
    margin-top: 1em;

    .k-button {
      width: 100%;
    }
  }
}

.k-productform--bundleselect {
  &__item {
    position: relative;
    margin-bottom: 1em;

    input,
    label {
      display: inline-block;
      min-width: auto;

      &:hover {
        cursor: pointer;
      }
    }

    input {
      margin-right: 1em;
    }

    &:last-child {
      margin-bottom: 0;
    }

    &--drawer {
      height: 0;
      overflow: hidden;
      transition: height 0.2s $ease-out-circ;

      .k-productform--bundleselect__variant {
        margin-bottom: 0.5em;

        &:last-child {
          margin-bottom: 0;
        }
      }
    }
  }

  input[type='radio'] {
    position: absolute;
    visibility: hidden;

    & + label {
      position: relative;
      display: block;
      border: 1px solid #ccc;
      border-radius: 0.25em;
      color: #ccc;
      text-align: center;
      padding: 0.667em 1.15em;
      transition: color 0.4s $ease-out-circ;
      overflow: hidden;

      &:hover {
        cursor: pointer;
      }

      span {
        position: relative;
        z-index: 2;
        pointer-events: none;
      }

      &:after {
        display: block;
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background: $bg-dark;
        transition: transform 0.4s $ease-out-circ;
        transform: scale(1, 0);
        transform-origin: bottom center;
        pointer-events: none;
        user-select: none;
      }
    }

    &.selected,
    &:checked {
      & + label {
        color: $true-white;

        &:after {
          transition: transform 0.2s $ease-out-circ;
          transform: scale(1, 1);
          transform-origin: top center;
        }
      }
    }
  }
}

@media (min-width: $bp-sm) {
  .k-producthero {
    &--details {
      &__content {
        padding: 2em;
      }
    }
  }

  .k-productform {
    &--item {
      order: 1 !important;
    }

    &--quantity,
    &--price,
    &--submit {
      margin-top: 0.5em;
    }

    &--quantity,
    &--price {
      flex-basis: 25%;
    }

    &--submit {
      flex-basis: 40%;
    }
  }

  .k-productform--bundleselect {
    &__item {
      &--flex {
        display: flex;
        justify-content: space-between;
        flex-flow: row wrap;
        padding: 1em 0;

        .k-productform--bundleselect__variant {
          flex-basis: 48.5%;
        }
      }
    }
  }
}

@media (min-width: $bp-md) {
  .k-productform {
    &--variants {
      display: flex;
      justify-content: space-between;
      flex-flow: row wrap;
      align-items: stretch;
    }

    &--variantselect {
      flex-basis: 48.5%;
    }

    &--quantity,
    &--submit,
    &--price {
      margin-top: 0em;
    }

    &--quantity {
      flex-basis: 15%;
      margin-right: 10%;
    }

    &--submit {
      flex-basis: 50%;
    }

    &--quantity {
      input[type='number'] {
        // padding: 1.25em 0;
      }
    }
  }
}

@media (min-width: $bp-lg) {
  .k-producthero {
    .k-inner {
      @include clearfix();
      padding: 4em 5%;
    }

    &--gallery,
    &--details {
      float: left;
    }

    &--gallery {
      width: 40%;
      margin-right: 5%;
      padding: 0;
    }

    &--details {
      width: 50%;

      &__content {
        padding: 0;
      }
    }
  }

  .k-productform {
    &--quantity {
      flex-basis: 20%;
      margin-right: 0;
    }

    &--submit {
      flex-basis: 45%;
    }
  }
}

@media (min-width: $bp-xxl) {
  .k-producthero {
    .k-inner {
      padding: 8em 5%;
    }

    &--gallery {
      margin-right: 15%;
    }

    &--details {
      width: 45%;
    }

    .k-rte-content,
    .k-productform {
      width: 75%;
    }
  }

  .k-productform {
    &--variantselect {
      // flex-basis: 22.5%;
    }
  }
}

